Create common module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     testImplementation test.junit
     androidTestImplementation test.extJunit
     androidTestImplementation test.espresso
+
+    implementation project(":common")
 }
