--- a/versions.gradle
+++ b/versions.gradle
@@ -12,6 +12,7 @@ ext {
     androidx_corektx_version = "1.3.2"
     androidx_appcompat_version = "1.2.0"
     androidx_constraintlayout_version = "2.0.4"
+    androidx_preference_version = "1.1.1"
 
     google_material_version = "1.3.0"
     google_firebasebom_version = "26.7.0"
