--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,7 +9,8 @@ ext {
             coreKtx: ("androidx.core:core-ktx:$androidx_corektx_version"),
             appCompat: ("androidx.appcompat:appcompat:$androidx_appcompat_version"),
             constraintLayout: ("androidx.constraintlayout:constraintlayout:$androidx_constraintlayout_version"),
-            preference: ("androidx.preference:preference:$androidx_preference_version")
+            preference: ("androidx.preference:preference:$androidx_preference_version"),
+            datastorePreference: ("androidx.datastore:datastore-preferences:$androidx_datastorepref_version")
     ]
 
     google = [
