--- a/versions.gradle
+++ b/versions.gradle
@@ -13,6 +13,7 @@ ext {
     androidx_appcompat_version = "1.2.0"
     androidx_constraintlayout_version = "2.0.4"
     androidx_preference_version = "1.1.1"
+    androidx_datastorepref_version = "1.0.0-alpha08"
 
     google_material_version = "1.3.0"
     google_firebasebom_version = "26.7.0"
