--- a/versions.gradle
+++ b/versions.gradle
@@ -18,6 +18,9 @@ ext {
     google_material_version = "1.3.0"
     google_firebasebom_version = "26.7.0"
 
+    version_dagger = "2.30.1"
+    version_dagger_assisted = "0.5.0"
+
     test_junit_version = "4.13.2"
     test_extjunit_version = "1.1.2"
     test_espresso_version = "3.3.0"
